# SyosetsuMining

./: .gitignore  README.md  daily.csv  daily_fetch.py  daily_plots.py  monthly_prep.py  pyproject.toml  syosetsuLib.py
.github/workflows/: daily_scrape.yml  monthly_prep.yml
plots/: TokyoModNight.mplstyle
