[tool.poetry]
name = "syosetsumining"
version = "0.0.1"
description = "Script to mine syosetsu"
authors = ["Your Name <you@example.com>"]
license = "AGPL v3"

[tool.poetry.dependencies]
python = "3.10"
pandas = "^1.3.5"
beautifulsoup4 = "^4.10.0"
httpx = "0.23.0"
matplotlib = "^3.5.1"
matplotx = {extras = ["all"], version = "^0.3.1"}
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
